[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/buttons/PLAY AGAIN 2.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons/PLAY AGAIN 1.png" type="Texture" id=2]
[ext_resource path="res://PlayAgainButton.gd" type="Script" id=3]
[ext_resource path="res://sound/sound effects/buttons.wav" type="AudioStream" id=4]

[node name="playAgainButton" type="TouchScreenButton"]
position = Vector2( 395.483, 397.371 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )
script = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="." to="." method="_on_playAgainButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
